@@ -55,8 +55,9 @@ public interface ConfigOptions {
 	public static final String VALUE_NEW_PLAYER_SPAWN = "newPlayerSpawn";
 	
 	public static final String COOLDOWN_BASE = "cooldown.";
-	public static final String COOLDOWN_PER_HOME = COOLDOWN_BASE + "cooldownPerHome";
-	public static final String COOLDOWN_PER_HOME_OVERRIDE = COOLDOWN_BASE + "cooldownPerHomeOverride";
+//	public static final String COOLDOWN_PER_HOME = COOLDOWN_BASE + "cooldownPerHome";
+//	public static final String COOLDOWN_PER_HOME_OVERRIDE = COOLDOWN_BASE + "cooldownPerHomeOverride";
+	public static final String COOLDOWN_SEPARATION = "cooldown.separation";
 	public static final String WARMUP_BASE = "warmup.";
 	public static final String COST_BASE = "cost.";
 	public static final String COST_VERBOSE = COST_BASE + "verbose";
