@@ -4,6 +4,11 @@ the local world
 * Ticket #24/#25/#30: cooldowns per-permission, per-world and per-home
 * Ticket #24: warmups per-permission and per-world
 * Ticket #24: cost per-permisson and per-world
+* Ticket #25: add cooldown for /sethome
+* Ticket #25: separate timer for "home-named" and "sethome-named"
+* added a "basic" config.yml that is copied in place if none exists. This is a
+bit simpler for new users to understand - the "config-defaults.yml" always
+contains the full listing of options available.
 
 v1.1.3 - December 19, 2011
 * Ticket #31: bugfix for /sethome taking money when player is at home limit
